syntax = "proto3";
package transform;

message TransformPosition {
  float x = 1;
  float y = 2;
}

message TransformScale {
  float x_scale = 1;
  float y_scale = 2;
}

message TransformData {
  TransformPosition position = 1;
  TransformScale scale = 2;
}

message TransformComponentInit {
  TransformData data = 1;
}
